--- a/google_map_try.html
+++ b/google_map_try.html
@@ -21,7 +21,7 @@
     <script>
       // This example requires the Places library. Include the libraries=places
       // parameter when you first load the API. For example:
-      // <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDW9MNbuhvh4wb6fHYYkKlQ940SamU3zDA&libraries=places">
+      // <script src="https://maps.googleapis.com/maps/api/js?key=APIKEYHERE&libraries=places">
 
       var map;
       var infowindow;
@@ -218,7 +218,7 @@
   </head>
   <body>
     <div id="map"></div>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbW6FGKsMrKja-C5y0ohy94FxBOKO0hMc&libraries=places&callback=getLocation" async defer></script>
-   <script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyCbW6FGKsMrKja-C5y0ohy94FxBOKO0hMc&libraries=geometry"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=APIKEYHERE&libraries=places&callback=getLocation" async defer></script>
+   <script type="text/javascript" src="http://maps.google.com/maps/api/js?key=APIKEYHERE&libraries=geometry"></script>
   </body>
 </html>
